test/integration/bad/array_expr_bad1.stan
transformed data {
  array[3,2] real td_arr32 = { 1, 3 };
}
model {
}
